--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/x-icon" href="/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horizon Hunt</title>
-    <link rel="icon" type="image/x-icon" href="./public/img/logo-mark.svg" />
+    <link rel="icon" type="image/x-icon" href="/img/logo-mark.svg" />
   </head>
   <body>
     <div id="root"></div>
