--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/x-icon" href="/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Horizon Hunt</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo-mark.svg" />
+    <title>Navigator</title>
+    <!-- <link rel="icon" type="image/x-icon" href="/img/logo-mark.svg" /> -->
   </head>
   <body>
     <div id="root"></div>
