--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/x-icon" href="/favicon.png" /> -->
+    <link rel="icon" type="image/x-icon" href="/img/leo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigator</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/img/logo-mark.svg" /> -->
+    <title>Leo</title>
   </head>
   <body>
     <div id="root"></div>
